Add Nezha integration and configuration options in PaperBootstrap